--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
     font-family: 'Open Sans', sans-serif;
-    max-width: 100%;
     
 }
 section{
@@ -9,7 +8,7 @@ section{
     
 }
 .sec1{
-    background-image: url(/my-image/top-banner.png);
+    background-image: url(my-image/top-banner.png);
     background-repeat: no-repeat;
     
     margin: -10px;
@@ -47,15 +46,15 @@ button {
     cursor: pointer;
 }
 .sec2{
-    background-image: url(/my-image/dream-bg.png);
+    background-image: url(my-image/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
-    margin-right: -10px;
+    margin-right: -10px ;
 }
 
 .sec3{
 justify-content: center;
-background-image: url(/my-image/exp-bg.png);
+background-image: url(my-image/exp-bg.png);
 background-repeat: no-repeat;
 background-position: 0 50px;
 margin-left: -10px;
